# svcctl

./: .gitignore  LICENSE  README.md  package.json  tsconfig.json
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
scripts/: build-all.ps1  build-icon.ps1  build-launcher.ps1  bump-version.ps1  dev.ps1  package.ps1  publish.ps1
src/: config.ts  format.ts  index.ts  logger.ts  paths.ts
src/commands/: add.ts  disable.ts  enable.ts  helpers.ts  install.ts  log.ts  ls.ts  remove.ts  restart.ts  start.ts  status.ts  stop.ts
src/entries/: command.ts  match.ts  name.ts  store.ts  types.ts
src/install/: index.ts  linux.ts  macos.ts  windows.ts
src/supervise/: index.ts  spawn.ts
tests/: command.test.ts  control.test.ts  enable-disable.test.ts  manual-startup-bug.test.ts  match.test.ts  name.test.ts  restart-opt-in.test.ts  store-helpers.ts  store.test.ts  tree-kill.test.ts  upgrade-windows.test.ts
