[package]
name = "svcctl-supervisor"
version = "0.1.0"
edition = "2021"
description = "svcctl supervisor (Windows) - hidden-console multi-entry process manager"
license = "MIT"

[[bin]]
name = "svcctl-supervisor"
path = "src/main.rs"

[dependencies]
toml = "0.8"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
