[package]
name = "svcctl"
version = "0.4.2"
edition = "2021"
description = "svcctl (Windows) - hidden-console multi-entry process manager"
license = "MIT"

[[bin]]
name = "SvcCtl"
path = "src/main.rs"

[dependencies]
toml = "0.8"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# winres 只在 Windows 平台引入（macOS / Linux build.rs no-op）
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
