[package]
name = "svcctl"
version = "0.4.5"
edition = "2021"
description = "svcctl (Windows) - hidden-console multi-entry process supervisor"
license = "MIT"

[[bin]]
name = "SvcCtl"
path = "src/main.rs"

[dependencies]
toml = "0.8"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# v0.4.4: Job Object + AttachConsole + GenerateConsoleCtrlEvent —— 让 supervisor 真正成为进程树根
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_JobObjects",  # CreateJobObjectW / SetInformationJobObject / AssignProcessToJobObject
  "Win32_Security",           # SECURITY_ATTRIBUTES (CreateJobObjectW 参数)
  "Win32_System_Threading",    # OpenProcess
  "Win32_System_Console",      # AttachConsole / FreeConsole / GenerateConsoleCtrlEvent / SetConsoleCtrlHandler
  "Win32_Foundation",          # HANDLE / CloseHandle
] }

# winres 只在 Windows 平台引入（macOS / Linux build.rs no-op）
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
